Contactus horizontal scroll fixed

--- a/src/Components/Contacts/contacts.scss
+++ b/src/Components/Contacts/contacts.scss
@@ -1,7 +1,7 @@
 body {
-  max-width: 100vw !important;
   .contactBody {
-    max-width: 100% !important;
+    width: 80%;
+    margin: 0 auto;
     font-family: Poppins;
     font-style: normal;
     font-weight: normal;
@@ -26,7 +26,7 @@ body {
       color: #333333;
     }
     .mapContainer {
-      width: calc(100% - 2rem);
+      width: 100%;
       height: 50vh;
       iframe {
         width: 100%;
@@ -123,13 +123,16 @@ body {
 }
 
 @media all and (max-width: 768px) {
-  .contactForm {
-    form {
-      h1 {
-        font-size: 2.5rem;
-        font-weight: bold;
-        text-align: center;
-        font-family: poppins;
+  .contactBody {
+    width: 99% !important;
+    .contactForm {
+      form {
+        h1 {
+          font-size: 2.5rem;
+          font-weight: bold;
+          text-align: center;
+          font-family: poppins;
+        }
       }
     }
   }
